@@ -16,6 +16,8 @@ jobs:
       BONJOUR_BASE_DIR: ${{ github.workspace }}\deps\bonjour
       QT_VERSION: 5.12.6
       QT_BASE_URL: http://qt.mirror.constant.com/
+      BONJOUR_SDK_HOME: ${{ github.workspace }}\deps\bonjour\BonjourSDK
+      CMAKE_PREFIX_PATH: ${{ github.workspace }}\deps\Qt\5.12.6\msvc2017_64\
 
     steps:
     - uses: actions/checkout@v2
@@ -35,9 +37,6 @@ jobs:
         cd $env:QT_BASE_DIR\$env:QT_VERSION\msvc2017_64
         dir
 
-    - name: set QT path
-      run:  echo "::set-env name=CMAKE_PREFIX_PATH::$env:QT_BASE_DIR\$env:QT_VERSION\msvc2017_64\"
-
     - name: Cache Bonjour
       id: cache-bonjour
       uses: actions/cache@v1
@@ -53,11 +52,8 @@ jobs:
         $client.DownloadFile("https://binaries.symless.com/bonjour/BonjourSDK.zip",".\bonjoursdk.zip")
         [System.IO.Compression.ZipFile]::ExtractToDirectory(".\bonjoursdk.zip", $env:BONJOUR_BASE_DIR)
 
-    - name: set Bonjour path
-      run:  echo "::set-env name=BONJOUR_SDK_HOME::$env:BONJOUR_BASE_DIR\BonjourSDK"
-
     - name: Add msbuild to PATH
-      uses: microsoft/setup-msbuild@v1.0.1
+      uses: microsoft/setup-msbuild@v1.0.2
 
     - name: Build
       run: |
